test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET__api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Thu, 03 Apr 2025 05:08:24 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="cnxsB/16tDMnbDq7sV1atsDMFZO6odBu", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}